--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^9.0.2",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "svg2img": "^1.0.0-beta.2"
   }
 }
